@@ -10,6 +10,8 @@
 
 
 Version 4.2.2
+ - Fixed: [ 2231897 ] [416pre] - Add GEDCOM ... Default person (fisharebest)
+ - Fixed: [ 1783041 ] (4.1)  Unable to find record with ID (fisharebest)
  - Changed: Fixed error occurring in inverselink.php, Changed "add" simplyxxx theme icons for clarity, small language change (windmillway)
  - Added [ 1209782 ] Top Down pedigree tree (wooc)
  - Changed: Various core files in preparation for GEDFact_assistant/MEDIA/ module (windmillway)
